--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,9 @@ setw -g mouse on
 # Reload tmux config
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
+# Remove timeout for escape key
+set -g escape-time 0
+
 ## KEY BINDINGS
 ###############
 
@@ -16,12 +19,12 @@ set-option -g prefix C-o
 bind-key C-o send-prefix
 
 # Split panes using - and |
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
-# Pane navigation
+# Vim-compatible pane navigation
 bind -n C-h select-pane -L
 bind -n C-j select-pane -D
 bind -n C-k select-pane -U
@@ -43,7 +46,7 @@ bind P paste-buffer
 
 # Panes
 set -g pane-border-fg white
-set -g pane-active-border-fg colour33
+set -g pane-active-border-fg colour118
 
 # Status bar
 set -g status-utf8 on
