:checkered_flag: Checkpoint

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,12 @@ bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 # Remove timeout for escape key
 set -g escape-time 0
 
+# Force term for better perf
+set -g default-terminal "screen-256color"
+
+# If a pane is manually named, do not let the window rename change it.
+set-option -g allow-rename off
+
 ## KEY BINDINGS
 ###############
 
@@ -50,6 +56,10 @@ bind P paste-buffer
 # Panes
 set -g pane-border-fg white
 set -g pane-active-border-fg colour118
+
+# Base index of 1
+set -g base-index 1
+setw -g pane-base-index 1
 
 # Status bar
 set -g status-utf8 on
