--- a/tmux.conf
+++ b/tmux.conf
@@ -31,13 +31,11 @@ unbind '"'
 unbind %
 
 # Vim-compatible pane navigation
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Arrange panes evenly
 bind C-v select-layout even-vertical
@@ -54,8 +52,8 @@ bind P paste-buffer
 ########
 
 # Panes
-set -g pane-border-fg white
-set -g pane-active-border-fg colour118
+set -g pane-border-style fg=white
+set -g pane-active-border-style fg=colour118
 
 # Base index of 1
 set -g base-index 1
@@ -64,13 +62,11 @@ setw -g pane-base-index 1
 # Status bar
 set -g status-justify left
 set -g status-interval 2
-set -g status-attr dim
+set -g status-style bg=colour234,fg=colour33
+# set -g status-style bg=colour234,fg=colour33,dim
 
-set -g status-bg colour234
-set -g status-fg colour33
 setw -g window-status-format ' #I #W '
-setw -g window-status-current-fg colour232
-setw -g window-status-current-bg colour33
+setw -g window-status-current-style fg=colour232,bg=colour33
 setw -g window-status-current-format ' #I #W '
 
 set -g status-left ''
